<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Braintree Demo</string>

    <!-- MainActivity -->
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="nonce">Nonce</string>
    <string name="drop_in">Drop-In</string>
    <string name="new_drop_in">New Drop-In</string>
    <string name="payment_button">Payment Button</string>
    <string name="create_transaction">Create a Transaction</string>
    <string name="loading">Loading…</string>
    <string name="buy">Buy</string>
    <string name="cart">Cart</string>

    <!-- CreateTransactionActivity -->
    <string name="processing_transaction">Processing Transaction</string>
    <string name="transaction_failed">Transaction Failed</string>
    <string name="transaction_complete">Transaction Complete</string>
    <string name="purchase_complete">Purchase Complete</string>

    <!-- Settings -->
    <string name="options">Options</string>
    <string name="sandbox">Sandbox</string>
    <string name="production">Production</string>
    <string name="authorization">Authorization</string>
    <string name="tokenization_key">Use Tokenization Key</string>
    <string name="tokenization_key_summary">Use tokenization key for authorizing requests</string>
    <string name="customer">Customer</string>
    <string name="customer_summary">The customer id to use</string>
    <string name="merchant_account">Merchant Account</string>
    <string name="empty_merchant_account">Not specifying a merchant account will use the default merchant account. \n\nMerchant Account: %s</string>
    <string name="collect_device_data">Collect Device Data</string>
    <string name="collect_device_data_summary">Collects device data for fraud purposes</string>
    <string name="environment">Environment</string>
    <string name="android_pay">Android Pay</string>
    <string name="android_pay_is_billing_agreement">isBillingAgreement</string>
    <string name="android_pay_is_billing_agreement_summary">Use Android Pay with a billing agreement</string>
    <string name="android_pay_require_shipping_address">Require Shipping Address</string>
    <string name="android_pay_require_shipping_address_summary">Require shipping address from the user</string>
    <string name="android_pay_require_phone_number">Require Phone Number</string>
    <string name="android_pay_require_phone_number_summary">Require phone number from the user</string>
    <string name="android_pay_currency_title">Currency</string>
    <string name="android_pay_currency_summary">Must be ISO-4217 format. \n\nCurrency: %s</string>
    <string name="android_pay_allowed_countries_for_shipping_title">Allowed countries for shipping</string>
    <string name="android_pay_allowed_countries_for_shipping_summary">Must be ISO-3166-2, separate by comma for multiple countries. \n\nCountries: %s</string>
    <string name="paypal">PayPal</string>
    <string name="paypal_use_hardcoded_configuration">Use Hardcoded Configuration</string>
    <string name="paypal_use_hardcoded_configuration_summary">Use the configuration included in the PayPal SDK instead of downloading new configuration</string>
    <string name="paypal_request_address_scope">Request Address Scope</string>
    <string name="paypal_request_address_scope_summary">Request address scope from the user</string>
    <string name="three_d_secure">3D Secure</string>
    <string name="enable_three_d_secure">Enable 3D Secure</string>
    <string name="enable_three_d_secure_summary">3D Secure will automatically be run on all Card payment methods</string>
    <string name="require_three_d_secure">Require 3D Secure</string>
    <string name="require_three_d_secure_summary">Requires a successful authentication for 3D Secure transactions</string>
    <string name="paypal_disable_signature_verification">Disable app switch signature verification</string>
    <string name="paypal_disable_signature_verification_summary">Allows app switch with a PayPal Wallet app that is not signed</string>
    <string name="paypal_future_payment">Future Payment</string>
    <string name="paypal_future_payment_address_scope">Future Payment (Address Scope)</string>
    <string name="paypal_single_payment">Single Payment</string>
    <string name="paypal_billing_agreement">Billing Agreement</string>
    <string name="paypal_payment_type">Payment Type</string>
</resources>
