<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/authorization">

        <CheckBoxPreference
            android:key="tokenization_key"
            android:title="@string/tokenization_key"
            android:summary="@string/tokenization_key_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/customer">

        <EditTextPreference
            android:key="customer"
            android:title="@string/customer"
            android:summary="@string/customer_summary"
            android:defaultValue="" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/options">

        <com.braintreepayments.demo.views.SummaryEditTestPreference
            android:key="merchant_account"
            android:title="@string/merchant_account"
            android:summary="@string/empty_merchant_account"
            android:defaultValue=""/>

        <CheckBoxPreference
            android:key="collect_device_data"
            android:title="@string/collect_device_data"
            android:summary="@string/collect_device_data_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/paypal">

        <CheckBoxPreference
            android:key="paypal_disable_signature_verification"
            android:title="@string/paypal_disable_signature_verification"
            android:summary="@string/paypal_disable_signature_verification_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="paypal_use_hardcoded_configuration"
            android:title="@string/paypal_use_hardcoded_configuration"
            android:summary="@string/paypal_use_hardcoded_configuration_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="paypal_request_address_scope"
            android:title="@string/paypal_request_address_scope"
            android:summary="@string/paypal_request_address_scope_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="paypal_payment_type"
            android:title="@string/paypal_payment_type"
            android:entries="@array/paypal_payment_types"
            android:entryValues="@array/paypal_payment_types_values"
            android:defaultValue="@string/paypal_billing_agreement" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/three_d_secure">

        <CheckBoxPreference
            android:key="enable_three_d_secure"
            android:title="@string/enable_three_d_secure"
            android:summary="@string/enable_three_d_secure_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="required_three_d_secure"
            android:title="@string/require_three_d_secure"
            android:summary="@string/require_three_d_secure_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Drop-In">

        <CheckBoxPreference
            android:key="enable_vault_mamanger"
            android:title="Enable Vault Manager"
            android:summary="Allows deleting vaulted payment methods."
            android:defaultValue="false" />

        <ListPreference
            android:key="cardholder_name_status"
            android:title="Cardholder Name Status"
            android:summary="Determines if the Cardholder Name's visibility, and validity"
            android:entries="@array/cardholder_name_status"
            android:entryValues="@array/cardholder_name_status_values" />

        <CheckBoxPreference
            android:key="save_card_checkbox_visible"
            android:title="Save Card Checkbox Visible"
            android:summary="Ask the customer if they would like to save their card for future use"
            android:defaultValue="true"/>

        <CheckBoxPreference
            android:key="save_checkbox_default_value"
            android:title="Save Card Checkbox Default Value"
            android:summary="The initial value of the Save Card Checkbox. If the Checkbox is not visible, this value determines if we save the card" />

    </PreferenceCategory>

</PreferenceScreen>